# examples/openapi.yml
@@ -11,7 +11,7 @@
         "version": "0.0.1"
     },
     "paths": {
-        "/test": {
+        "/r/app/test/{username}": {
             "post": {
                 "description": "Creates a user and then sends a generated password email",
                 "summary": "Create User",
@@ -22,14 +22,21 @@
                         "name": "username",
                         "in": "path",
                         "required": true,
-                        "schema": {}
+                        "schema": {
+                            "pattern": "^[-a-z0-9_]+$"
+                        }
                     },
                     {
                         "description": "The user's Membership Type",
                         "name": "membershipType",
                         "in": "query",
                         "required": true,
-                        "schema": {}
+                        "schema": {
+                            "enum": [
+                                "premium",
+                                "standard"
+                            ]
+                        }
                     }
                 ],
                 "responses": {
@@ -38,9 +45,19 @@
                         "content": {
                             "application/json": {
                                 "schema": {
+                                    "description": "example",
                                     "type": "object",
-                                    "title": "Empty Schema",
-                                    "$schema": "http://json-schema.org/draft-04/schema"
+                                    "title": "JSON API Schema",
+                                    "properties": {
+                                        "SomeObject": {
+                                            "type": "object",
+                                            "properties": {
+                                                "SomeAttribute": {
+                                                    "type": "string"
+                                                }
+                                            }
+                                        }
+                                    }
                                 }
                             }
                         }
@@ -50,122 +67,20 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "description": "This is a schema for responses in the JSON API format. For more, see http://jsonapi.org",
                                     "type": "object",
-                                    "title": "JSON API Schema",
-                                    "required": [
-                                        "errors"
-                                    ],
                                     "properties": {
-                                        "errors": {
-                                            "type": "array",
-                                            "uniqueItems": true,
-                                            "items": {
-                                                "$ref": "#/definitions/error"
-                                            }
-                                        },
-                                        "links": {
-                                            "$ref": "#/definitions/links"
-                                        },
-                                        "meta": {
-                                            "$ref": "#/definitions/meta"
-                                        }
-                                    },
-                                    "additionalProperties": false,
-                                    "definitions": {
                                         "error": {
                                             "type": "object",
                                             "properties": {
-                                                "code": {
-                                                    "description": "An application-specific error code, expressed as a string value.",
+                                                "fields": {
                                                     "type": "string"
                                                 },
-                                                "detail": {
-                                                    "description": "A human-readable explanation specific to this occurrence of the problem.",
-                                                    "type": "string"
-                                                },
-                                                "id": {
-                                                    "description": "A unique identifier for this particular occurrence of the problem.",
-                                                    "type": "string"
-                                                },
-                                                "links": {
-                                                    "$ref": "#/definitions/links"
-                                                },
-                                                "meta": {
-                                                    "$ref": "#/definitions/meta"
-                                                },
-                                                "source": {
-                                                    "type": "object",
-                                                    "properties": {
-                                                        "parameter": {
-                                                            "description": "A string indicating which query parameter caused the error.",
-                                                            "type": "string"
-                                                        },
-                                                        "pointer": {
-                                                            "description": "A JSON Pointer [RFC6901] to the associated entity in the request document [e.g. \"/data\" for a primary data object, or \"/data/attributes/title\" for a specific attribute].",
-                                                            "type": "string"
-                                                        }
-                                                    }
-                                                },
-                                                "status": {
-                                                    "description": "The HTTP status code applicable to this problem, expressed as a string value.",
-                                                    "type": "string"
-                                                },
-                                                "title": {
-                                                    "description": "A short, human-readable summary of the problem. It **SHOULD NOT** change from occurrence to occurrence of the problem, except for purposes of localization.",
+                                                "message": {
                                                     "type": "string"
                                                 }
-                                            },
-                                            "additionalProperties": false
-                                        },
-                                        "link": {
-                                            "description": "A link **MUST** be represented as either: a string containing the link's URL or a link object.",
-                                            "oneOf": [
-                                                {
-                                                    "description": "A string containing the link's URL.",
-                                                    "type": "string",
-                                                    "format": "uri"
-                                                },
-                                                {
-                                                    "type": "object",
-                                                    "required": [
-                                                        "href"
-                                                    ],
-                                                    "properties": {
-                                                        "href": {
-                                                            "description": "A string containing the link's URL.",
-                                                            "type": "string",
-                                                            "format": "uri"
-                                                        },
-                                                        "meta": {
-                                                            "$ref": "#/definitions/meta"
-                                                        }
-                                                    }
-                                                }
-                                            ]
-                                        },
-                                        "links": {
-                                            "description": "A resource object **MAY** contain references to other resource objects (\"relationships\"). Relationships may be to-one or to-many. Relationships can be specified by including a member in a resource's links object.",
-                                            "type": "object",
-                                            "properties": {
-                                                "related": {
-                                                    "$ref": "#/definitions/link"
-                                                },
-                                                "self": {
-                                                    "description": "A `self` member, whose value is a URL for the relationship itself (a \"relationship URL\"). This URL allows the client to directly manipulate the relationship. For example, it would allow a client to remove an `author` from an `article` without deleting the people resource itself.",
-                                                    "type": "string",
-                                                    "format": "uri"
-                                                }
-                                            },
-                                            "additionalProperties": true
-                                        },
-                                        "meta": {
-                                            "description": "Non-standard meta-information that can not be represented as an attribute or relationship.",
-                                            "type": "object",
-                                            "additionalProperties": true
+                                            }
                                         }
-                                    },
-                                    "$schema": "http://json-schema.org/draft-04/schema"
+                                    }
                                 }
                             }
                         }
