# models/functions.go
@@ -1,6 +1,9 @@
 package models
 
-import "github.com/go-openapi/spec"
+import (
+	"github.com/go-openapi/spec"
+	"github.com/mitchellh/mapstructure"
+)
 
 type Function struct {
 	Handler string             `json:"handler,omitempty" yaml:"handler,omitempty"`
@@ -29,6 +32,7 @@ func (f *Function) ValidateEventTypes() bool {
 }
 
 type FnFunction struct {
+	Application Application            `json:"application" yaml:"application"`
 	Name        string                 `json:"name" yaml:"name,omitempty"`
 	Version     string                 `json:"version" yaml:"version,omitempty"`
 	Path        string                 `json:"path,omitempty" yaml:"path,omitempty"`
@@ -48,7 +52,7 @@ func (fn *FnFunction) UnmarshalYAML(unmarshal func(interface{}) error) error {
 		return unmarshalReferenceFile(unmarshal, fn)
 	}
 
-	return nil
+	return mapstructure.Decode(fnInterface, fn)
 }
 
 type Event struct {
@@ -57,12 +61,42 @@ type Event struct {
 	Documentation FunctionDocumentation `json:"documentation,omitempty" yaml:"documentation,omitempty"`
 }
 
+type SimpleSchema struct {
+	spec.SimpleSchema
+	Maximum          *float64      `json:"maximum,omitempty" yaml:"maximum,omitempty"`
+	ExclusiveMaximum bool          `json:"exclusiveMaximum,omitempty" yaml:"exclusiveMaximum,omitempty"`
+	Minimum          *float64      `json:"minimum,omitempty" yaml:"minimum,omitempty"`
+	ExclusiveMinimum bool          `json:"exclusiveMinimum,omitempty" yaml:"exclusiveMinimum,omitempty"`
+	MaxLength        *int64        `json:"maxLength,omitempty" yaml:"maxLength,omitempty"`
+	MinLength        *int64        `json:"minLength,omitempty" yaml:"minLength,omitempty"`
+	Pattern          string        `json:"pattern,omitempty" yaml:"pattern,omitempty"`
+	MaxItems         *int64        `json:"maxItems,omitempty" yaml:"maxItems,omitempty"`
+	MinItems         *int64        `json:"minItems,omitempty" yaml:"minItems,omitempty"`
+	UniqueItems      bool          `json:"uniqueItems,omitempty" yaml:"uniqueItems,omitempty"`
+	MultipleOf       *float64      `json:"multipleOf,omitempty" yaml:"multipleOf,omitempty"`
+	Enum             []interface{} `json:"enum,omitempty" yaml:"enum,omitempty"`
+}
+
+type Parameter struct {
+	Description      string       `json:"description,omitempty" yaml:"description,omitempty"`
+	Name             string       `json:"name,omitempty" yaml:"name,omitempty"`
+	In               string       `json:"in,omitempty" yaml:"in,omitempty"`
+	Required         bool         `json:"required,omitempty" yaml:"required,omitempty"`
+	Schema           SimpleSchema `json:"schema,omitempty" yaml:"schema,omitempty"`
+	AllowEmptyValue  bool         `json:"allowEmptyValue,omitempty" yaml:"allowEmptyValue,omitempty"`
+	Type             string       `json:"type,omitempty" yaml:"type,omitempty"`
+	Format           string       `json:"format,omitempty" yaml:"format,omitempty"`
+	Items            *spec.Items  `json:"items,omitempty" yaml:"items,omitempty"`
+	CollectionFormat string       `json:"collectionFormat,omitempty" yaml:"collectionFormat,omitempty"`
+	Default          interface{}  `json:"default,omitempty" yaml:"default,omitempty"`
+}
+
 type FunctionDocumentation struct {
-	Summary     string            `json:"summary,omitempty" yaml:"summary,omitempty"`
-	Description string            `json:"description,omitempty" yaml:"description,omitempty"`
-	RequestBody PayloadSchema     `json:"requestBody,omitempty" yaml:"requestBody,omitempty"`
-	Parameters  []spec.ParamProps `json:"parameters,omitempty" yaml:"parameters,omitempty"`
-	Responses   map[int]Response  `json:"responses,omitempty" yaml:"responses,omitempty"`
+	Summary     string           `json:"summary,omitempty" yaml:"summary,omitempty"`
+	Description string           `json:"description,omitempty" yaml:"description,omitempty"`
+	RequestBody PayloadSchema    `json:"requestBody,omitempty" yaml:"requestBody,omitempty"`
+	Parameters  []Parameter      `json:"parameters,omitempty" yaml:"parameters,omitempty"`
+	Responses   map[int]Response `json:"responses,omitempty" yaml:"responses,omitempty"`
 }
 
 type Response struct {
